# CP77_entSpawner

./: .gitignore  README.md  baseEntity.archive  init.lua
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pack.yml
archive/base/spawner/: arrow.mesh  base_grid.w2mesh  capsule.mesh  capsule_body.mesh  capsule_cap.mesh  checker.xbm  cube.mesh  cube_aligned.mesh  empty_entity.ent  empty_game_object.ent  holo.mi  (+4 more)
cpp-src/: CMakeLists.txt
cpp-src/include/WorldBuilder/: WorldBuilderGlobal.h  globals.h  main.h
cpp-src/include/WorldBuilder/ImGuiHooks/: FrameContext.h  ImGuiHook.h
cpp-src/include/WorldBuilder/State/: Config.h  Project.h
cpp-src/include/WorldBuilder/State/Config/: Config.h  ConfigValue.h
cpp-src/include/WorldBuilder/UI/: ConfigWindow.h  Menubar.h  Window.h  WindowManager.h
cpp-src/include/WorldBuilder/reverse/: Addresses.h  RenderContext.h
cpp-src/src/: WorldBuilderGlobal.cpp  main.cpp
cpp-src/src/ImGuiHooks/: ImGuiHook.cpp
cpp-src/src/State/: Project.cpp
cpp-src/src/State/Config/: Config.cpp  ConfigValue.cpp
cpp-src/src/UI/: ConfigWindow.cpp  Menubar.cpp  WindowManager.cpp
cpp-src/src/reverse/: RenderContext.cpp
data/: Digital Oasis Apartment 1.2.json  HollywoodCliffhanger (1).json  The Gunrunners Club - Abandoned.json  allPaths.txt
data/AMMImport/: Club 27 - Glen Apartment.json  HollywoodCliffhanger.json  NC Orbital Apartment - Core.json  test copy.json  test.json
data/audio/: ambientDataFull.json  ambientMetadata.json  ambientMetadataAll.json  ambientMetadataFull.json  ambientQuadFull.json  signpostsData.json  staticDataFull.json  staticMetadataAll.json  staticMetadataFull.json
data/static/: vehicles.json
modules/ui/: baseUI.lua  exportUI.lua  externalUI.lua  favUI.lua  favoritesUI.lua  savedUI.lua  settingsUI.lua  spawnUI.lua  spawnedUI.lua  style.lua
modules/utils/: Cron.lua  ammUtils.lua  appFetcher.lua  cache.lua  config.lua  directionVisualizer.lua  dragHelper.lua  entityBuilder.lua  history.lua  hud.lua  input.lua  lightChannelHelper.lua  nodeRefRegistry.lua  preview.lua  previewUtils.lua  redConverter.lua  rhtPlugin.lua  settings.lua  tasks.lua  utils.lua  visualizer.lua
r6/scripts/: entBuilder.reds
script/: extractAudioInfo.wscript  import_object_spawner.ws  import_object_spawner.wscript
(+113 files in other folders)
